<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker Chips</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_game">Start Game</string>
    <string name="title_activity_new_game">Poker Game</string>
    <string name="title_activity_help">Handy Instructions</string>
    <string name="number_of_players">Number of Players</string>
    <string name="start_button">Start</string>
    <string name="help_button">HELPPPPPP</string>
    <string name="check_button">Check</string>
    <string name="bet_button">Bet</string>
    <string name="fold_button">Fold</string>
    <string name="win_button">End Hand</string>

    <string-array name="array_name">
        <item>Hello</item>
        <item>Is</item>
        <item>working</item>
    </string-array>

    

</resources>