<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:id ="@+id/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.poker_chips.MainActivity"
   	android:background="@drawable/casino">
    
    <ImageView
           android:id="@+id/imageView2"
           android:layout_width="750dp"
           android:layout_height="100dp"
           android:layout_alignParentTop="true"
           android:layout_centerHorizontal="true"
           android:src="@drawable/title" />
    
    <ImageView 
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop= "100dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/greenchip" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1" 
        android:text="@string/number_of_players"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="#FFF4E6"
		android:textSize="35sp"/>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/start_button"
        android:onClick = "StartGame"
        android:background="#4ed838"/>

    <Spinner
        android:id="@+id/num_players"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:focusable="true" 
        android:background="#4ed838"
		android:paddingLeft="12dp"/>
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/help_button"
        android:onClick ="Help"
        android:background="#4ed838"/>

</RelativeLayout>